--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,47 @@
+#.travis.yml
+sudo: required
+dist: trusty
+
+
 language: node_js
 node_js:
   #- "iojs"
   - "10"
-install:
-  - npm install @angular/cli
-sudo: required
+
+
 addons:
   chrome: stable
+
+
+
+apt:
+  sources:
+    - google-chrome
+  packages:
+    - google-chrome-stable
+    - google-chrome-beta
+
+
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
+branches:
+  only:
+    - master
+
+before_script:
+  - npm install -g @angular/cli
+
+script:
+- ng lint --typeCheck
+- ng test -sr
+- ng build --prod
+
+after_success:
+
+notifications:
+  email:
+    on_failure: change
+    on_success: change
