--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_script:
   - npm install -g @angular/cli
 
 script:
-- ng lint --typeCheck
+#- ng lint --typeCheck
 - ng test -sr
 - ng build --prod
 
