--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,9 @@ before_script:
 
 script:
 #- ng lint --typeCheck
+- ng lint
 - ng test
-## - ng build --prod
+- ng build --prod
 
 after_success:
 
