remove watch of test - add single run

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_script:
 script:
 #- ng lint --typeCheck
 - ng lint
-- ng test
+- ng test --watch=false
 - ng build --prod
 
 after_success:
